# nimbletools

./: .gitignore  LICENSE  PRIVACY.en.md  PRIVACY.md  README.md  README.zh.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  clipboard_db.rs  curl.rs  curl_db.rs  file.rs  hash.rs  hotkey.rs  image.rs  mod.rs  ocr.rs  screenshot.rs  watermark.rs
src/components/: Layout.tsx  Sidebar.tsx  ThemeProvider.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/pages/: ClipboardPopup.tsx  RegionSelector.logic.ts  RegionSelector.tsx  ScreenshotEditor.tsx  clipboardPopupKeyboard.ts
src/pages/FileTools/: BatchRenamePage.tsx  FileMergePage.tsx  FileSplitPage.tsx
src/pages/ImageTools/: CompressPage.tsx  FormatConvertPage.tsx  MergePage.tsx  ResizePage.tsx  WatermarkPage.tsx
src/pages/Screenshot/: ScreenCapturePage.tsx
src/pages/Settings/: SettingsPage.tsx
src/pages/TextTools/: Base64Page.tsx  FormatterPage.tsx  OcrPage.tsx  RegexTesterPage.tsx  TextStatsPage.tsx  UrlEncodePage.tsx
src/pages/UtilityTools/: ClipboardPage.tsx  ColorPickerPage.tsx  CurlPage.tsx  HashPage.tsx  NumberBasePage.tsx  PasswordPage.tsx  QrCodePage.tsx  (+3 more)
src/types/: curl.ts
src/utils/: canvasClipboard.ts  curlEditor.ts  hotkeyStore.ts  screenshotAnnotations.ts
tests/: canvasClipboard.test.ts  regionSelectorEsc.test.ts  screenshotAnnotations.test.ts
