[package]
name = "nimbletools"
version = "0.1.0"
description = "Privacy-first, offline utility toolbox"
authors = ["NimbleTools"]
edition = "2021"

[lib]
name = "nimbletools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
crc32fast = "1"
regex = "1"
arboard = "3"
tauri-plugin-global-shortcut = "2"
urlencoding = "2.1.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["time"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-vision = { version = "0.3", features = ["VNRecognizeTextRequest", "VNObservation", "VNRequest", "VNRequestHandler", "VNDefines"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSBitmapImageRep"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage"] }
block2 = "0.6"
